# aml-challenge

./: .gitignore  README.md  coco.py  ensemble.py  main.py  pyproject.toml
src/coco/: cleaning.py  creation.py  main.py
src/common/: device.py  plots.py
src/testing/: metrics.py  submission.py
src/training/: data.py  ensemble.py  mixup.py  model.py  train.py
